--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/express": "^4.17.13",
     "cz-conventional-changelog": "3.3.0",
-    "husky": "^7.0.0"
+    "husky": "^7.0.0",
+    "jest": "^27.0.6",
+    "ts-node-dev": "^1.1.8"
   },
   "dependencies": {
-    "commitizen": "^4.2.4"
+    "commitizen": "^4.2.4",
+    "express": "^4.17.1",
+    "typeorm": "^0.2.34"
   },
   "config": {
     "commitizen": {
