--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "prepare": "husky install",
+    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -15,7 +16,8 @@
     "cz-conventional-changelog": "3.3.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
-    "ts-node-dev": "^1.1.8"
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "commitizen": "^4.2.4",
