--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "prepare": "husky install",
-    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +18,13 @@
     "husky": "^7.0.0",
     "jest": "^27.0.6",
     "ts-node-dev": "^1.1.8",
+    "typeorm-cli": "^1.0.7",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "commitizen": "^4.2.4",
     "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.34"
   },
   "config": {
