--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commitizen": "^4.2.4",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
     "typeorm": "^0.2.34"
   },
   "config": {
