--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "prepare": "husky install",
-    "start": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "start": "tsnd --transpile-only --ignore-watch __tests__ --ignore-watch node_modules --respawn src/server.ts",
     "test": "jest"
   },
   "author": "",
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "^12.1.4",
     "@types/express": "^4.17.13",
+    "@types/jest": "^26.0.24",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
@@ -22,7 +23,10 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "commitizen": "^4.2.4",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
