--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
+    "@types/supertest": "^2.0.11",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
+    "supertest": "^6.1.3",
+    "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
     "typeorm-cli": "^1.0.7",
     "typescript": "^4.3.5"
