feat(user get router): create a get router to get all users

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", ".husky/UserController.ts"],
   "exclude": ["node_modules"]
 }
