--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.4",
     "bcrypt": "^5.0.1",
     "commitizen": "^4.2.4",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.34"
