--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^26.0.24",
-    "@types/supertest": "^2.0.11",
-    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/supertest": "^2.0.11",
     "cz-conventional-changelog": "3.3.0",
     "husky": "^7.0.0",
     "jest": "^27.0.6",
@@ -28,8 +28,10 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "bcrypt": "^5.0.1",
     "commitizen": "^4.2.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
