--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
+    "start": "node src/server.js",
+    "startdev": "tsnd --transpile-only --ignore-watch __tests__ --ignore-watch node_modules --respawn src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "prepare": "husky install",
-    "start": "tsnd --transpile-only --ignore-watch __tests__ --ignore-watch node_modules --respawn src/server.ts",
     "test": "jest"
   },
   "author": "",
