--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "softaliza",
   "version": "1.0.0",
-  "description": "",
+  "description": "An REST API to create blog posts. <br>\r Using `express`, `typescript` and `typeorm` with a `sqlite` `database`.",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "node src/server.js",
-    "startdev": "tsnd --transpile-only --ignore-watch __tests__ --ignore-watch node_modules --respawn src/server.ts",
+    "start:dev": "tsnd --transpile-only --ignore-watch __tests__ --ignore-watch node_modules --respawn typescript/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "prepare": "husky install",
     "test": "jest"
@@ -39,11 +39,20 @@
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "tsc": "^2.0.3",
     "typeorm": "^0.2.34"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jamesDockal/Blogposts-API-REST.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jamesDockal/Blogposts-API-REST/issues"
+  },
+  "homepage": "https://github.com/jamesDockal/Blogposts-API-REST#readme"
 }
