--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "__tests__"]
 }
