--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "build": "tsc",
+    "prestart": "npm run build",
     "start": "node src/server.js",
     "start:dev": "tsnd --transpile-only --ignore-watch __tests__ --ignore-watch node_modules --respawn typescript/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
@@ -34,14 +35,17 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "bcrypt": "^5.0.1",
     "commitizen": "^4.2.4",
     "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "express-openapi-validator": "^4.12.14",
     "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
+    "swagger-ui-express": "^4.1.6",
     "tsc": "^2.0.3",
     "typeorm": "^0.2.34"
   },
